<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.sid</groupId>
    <artifactId>portal-web</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>portal-web</name>
    <description>Portal web del sid para su visibilidad y control</description>
    <url/>
    <licenses>
        <license>
            <name>Propiedad SID - Todos los derechos reservados</name>
            <distribution>none</distribution> <!-- ¡Importante! Evita redistribución pública -->
        </license>
    </licenses>
    <!--    DESARROLLADORES-->
    <developers>
        <developer>
            <!--			 Lider : -->
            <name>Henry Ricaurte Mora</name>
            <email>hricaurtem@udistrital.edu.co</email>
            <organization>SID</organization>
            <roles>
                <role>Backend Developer</role>
                <role>Teach Lead</role>
                <role>Architect</role>
            </roles>
        </developer>
        <!--		 Desarrolladores -->
        <developer>
            <name>Javier Alejandro Penagos Hernández</name>
            <email>japenagosh@udistrital.edu.co</email>
            <organization>SID</organization>
            <roles>
                <role>Backend Developer</role>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <name>Jonathan Felipe Ochoa Silva</name>
            <email>jfochoas@udistrital.edu.co</email>
            <organization>SID</organization>
            <roles>
                <role>Backend Developer</role>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <name>Henry Ricaurte Mora</name>
            <email>hricaurtem@udistrital.edu.co</email>
            <organization>SID</organization>
            <roles>
                <role>Backend Developer</role>
            </roles>
        </developer>
        <!--		 Bases de datos: -->
        <developer>
            <name>Juan Pablo Bustos Urueña</name>
            <email>jpbustosu@udistrital.edu.co</email>
            <organization>SID</organization>
            <roles>
                <role>Database designer</role>
            </roles>
        </developer>
        <developer>
            <name>Henry Ricaurte Mora</name>
            <email>hricaurtem@udistrital.edu.co</email>
            <organization>SID</organization>
            <roles>
                <role>Backend Developer</role>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>
    <!--    PROPIEDADES -->
    <properties>
        <java.version>21</java.version>
        <project.license>Propietario</project.license>
    </properties>

    <!--    PERFILES-->
    <profiles>
        <profile>
            <id>test</id>
            <properties>
                <spring.profiles.active>test</spring.profiles.active>
            </properties>
        </profile>
    </profiles>

    <!--	 DEPENDENCIAS  -->

    <dependencies>
        <!--        Autenticacion OAuth-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-client</artifactId>
        </dependency>
        <!--        Security-->
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>0.11.5</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>0.11.5</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>0.11.5</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <!--        Estado del servidor-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>
        <!--        Inicio de la aplicacion-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <!--	Base de datos-->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <!--		Loombok-->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <!--		Documentacion: -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>2.5.0</version> <!-- Versión estable para Spring Boot 3.3.x -->
        </dependency>
        <!--		Testing-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.restdocs</groupId>
            <artifactId>spring-restdocs-mockmvc</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!--            Apartado de pruebas-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <!-- Reducir salida de logs -->
                    <testFailureIgnore>true</testFailureIgnore> <!-- Continúa aunque fallen -->
                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    <printSummary>true</printSummary>
                    <reportFormat>plain</reportFormat>

                    <!-- Configuraciones adicionales -->
                    <trimStackTrace>true</trimStackTrace>
                    <useSystemClassLoader>false</useSystemClassLoader>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.13</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!--            Demas plugins-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.asciidoctor</groupId>
                <artifactId>asciidoctor-maven-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>generate-docs</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>process-asciidoc</goal>
                        </goals>
                        <configuration>
                            <backend>html</backend>
                            <doctype>book</doctype>
                        </configuration>
                    </execution>
                </executions>
                <dependencies>
                    <!--					<dependency>-->
                    <!--						<groupId>org.springframework.restdocs</groupId>-->
                    <!--						<artifactId>spring-restdocs-asciidoctor</artifactId>-->
                    <!--						<version>${spring-restdocs.version}</version>-->
                    <!--					</dependency>-->
                </dependencies>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
